[package]
name = "jwtvoid"
version = "0.1.0"
authors = ["Aram Peres <contact@aramperes.ca>"]
edition = "2018"
description = "Utility to convert existing JWTs to the \"none\" algorithm"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aramperes/jwtvoid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
anyhow = "1"
base64-url = "1.4.10"
